# alumnic

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust-test.yml
src/: api.rs  cadastro_aluno.rs  configuracao.rs  ldap.rs  lib.rs  main.rs  portal_ufrj.rs
src/ldap/: cadastrar.rs  consulta.rs  error.rs  mod.rs  tipos.rs  utils.rs
src/utils/: hashes.rs  mod.rs  nome.rs  validacao_entradas.rs
