[package]
name = "alumnic"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
select = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-email = "3.2"
thiserror = "2.0"
ldap3 = "0.11.5"

