[package]
name = "alumnic"
version = "0.1.0"
authors = ["Arthur Bacci <arthurbacci@protonmail.com>"]
edition = "2024"
description = "Funcionalidades necessárias para o cadastro de novos alunos do IC"
readme = "README.md"
repository = "https://github.com/ic-ufrj/alumnic"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
select = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-email = "3.2"
thiserror = "2.0"
ldap3 = "0.11.5"
clap = { version = "4.5", features = ["derive"] }
unicode-normalization = "0.1"
itertools = "0.14"
regex = "1"

